@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-10T02:03:02Z",
+  "timestamp" : "2022-06-10T08:26:56Z",
   "count_outdated" : 504,
   "uniques_outdated" : 284,
-  "count" : 628,
-  "uniques" : 324,
+  "count" : 629,
+  "uniques" : 325,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
