@@ -1,5 +1,5 @@
 {
-  "count": 124,
+  "count": 125,
   "uniques": 21,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
